apache セキュリティ対策

--- a/ansible/roles/apache/files/httpd22.conf
+++ b/ansible/roles/apache/files/httpd22.conf
@@ -972,6 +972,9 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #</IfModule>
 # End of proxy directives.
 
+TraceEnable Off
+FileETag None
+
 ### Section 3: Virtual Hosts
 #
 # VirtualHost: If you want to maintain multiple domains/hostnames on your
