--- a/ansible/roles/apache/files/httpd24.conf
+++ b/ansible/roles/apache/files/httpd24.conf
@@ -349,6 +349,8 @@ AddDefaultCharset UTF-8
 #EnableMMAP off
 EnableSendfile on
 
+TraceEnable Off
+
 # Supplemental configuration
 #
 # Load config files in the "/etc/httpd/conf.d" directory, if any.
