--- a/ansible/roles/apache/tasks/main.yml
+++ b/ansible/roles/apache/tasks/main.yml
@@ -51,10 +51,14 @@
   with_items:
     - "{{ site }}"
 
-- name: logrotate ( Apache 2.2 )
+- name: logrotate ( CentOS6 Apache 2.2 )
   copy: src=logrotate-http22 dest=/etc/logrotate.d/httpd owner=root group=root mode=0644
   when: ansible_os_family == 'RedHat' and ansible_distribution_version.split('.')[0]|int == 6
 
-- name: logrotate ( Apache 2.4 )
+- name: logrotate ( Amazon Linux Apache 2.2 )
+  copy: src=logrotate-http22 dest=/etc/logrotate.d/httpd owner=root group=root mode=0644
+  when: ansible_distribution == 'Amazon'
+
+- name: logrotate ( CentOS7 Apache 2.4 )
   copy: src=logrotate-http24 dest=/etc/logrotate.d/httpd owner=root group=root mode=0644
   when: ansible_os_family == 'RedHat' and ansible_distribution_version.split('.')[0]|int == 7
